update content of index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,63 @@
+<!DOCUMENT html>
 <html>
 <head>
-
+	<meta charset="UTF-8">
+	<title>My weeb site title</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-
+	
+	<header>
+	
+		<div>
+	
+			<p>Witaj, jestem</p>
+			<h1>Paweł</h1>
+	
+		</div>
+	
+	</header>
+	
+	<main class="container">
+		
+		<section class="about">
+	
+			<h2>Kim jestem?</h2>
+	
+			<p>Mam 32 lata. Obecnie wykonywana praca nie sprawia mi satysfakcji, na szczęście odkryłem kodowanie. Zamierzam zostać front-end developerm.</p>
+	
+		</section>
+		
+		<section class="interests">
+			
+			<h2>Moje zainteresowania:</h2>
+	
+			<ul>
+				<li>Muzyka</li>
+				<li>Sport</li>
+				<li>Film</li>
+				<li>Motoryzacja</li>
+				<li>Nowe technologie</li>
+				<li>Kodowanie</li>
+			</ul>
+			
+			<h2>Więcej o mnie:</h2>
+	
+			<p>Najbardziej lubię muzykę punk-rockowa, ze sportów wszystkie związane z wodą. </p>
+	
+		<section>
+	
+	</main>
+	
+	<footer>
+		<p>Znajdziesz mnie na:</p> 
+		<div class="social-media">
+    		<i class="fa fa-facebook"></i>
+    		<i class="fa fa-twitter"></i>
+    		<i class="fa fa-google-plus"></i>
+    	</div>
+	</footer>
 </body>
+
 </html>
